# arquitetura_distribuida

./: .gitignore  README.md
firmware/: CMakeLists.txt  PROTOCOLO.md
firmware/arduino_escravo/: arduino_escravo.ino  config.h  pid_tanh.h  protocol_core.hpp
firmware/esp32_mestre/: CMakeLists.root.txt  CMakeLists.txt  config.hpp  controller.hpp  kinematics.hpp  protocol.hpp  sdkconfig  sdkconfig.defaults  trajectory.hpp
firmware/esp32_mestre/main/: CMakeLists.txt  config.h  kinematics.h  main.cpp  pid_tanh.h  rtde_core.h  trajectory.h  uart_master.h
firmware/qemu/: build_idf.ps1  launch_qemu.ps1  ponte1_uart.py  qemu_web.py
firmware/simavr/: Dockerfile  smoke.ps1  test_ponte1.py  uno_runner.c
firmware/tests/: protocol_core_test.cpp  rtde_core_test.cpp  run_tests.ps1  validate_math.cpp
helpers/: protocol.py
resultados/passo4/: manifest_sha256_csv.json  relatorio_passo4_final.json
resultados/passo4/dados_v4/: device_uno_malha_fechada.csv  lockstep_kd01_circular.csv  lockstep_kd01_linear_x.csv  lockstep_kd01_pick.csv  ursim_v4_circular.csv  ursim_v4_circular_manifest.json
webots/: MAPEAMENTO_JUNTAS.md  RASTREABILIDADE.md  README.md  config.yaml  ponte2_webots.py  ponte3_webots.py
webots/benchmark/: benchmark.py  rtde_eb15.py  rtde_ursim.py  trajectory.py  ursim_power_on.py
webots/protos/: UR10e.proto
webots/tests/: conftest.py  smoke_test.py  test_etapa4_webots.py  test_integration.py  test_protocol.py
webots/worlds/: eb15_hil.wbt  minimal_box.wbt  ur10e_encoder_test.wbt  ur10e_load_test.wbt  ur10e_two_points.wbt  ur10e_two_points_test.wbt
(+71 files in other folders)
